<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/update_add_event_container_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/update_add_event_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/update_add_event_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            app:cardElevation="4dp"
            app:cardMaxElevation="4dp">


            <LinearLayout
                android:id="@+id/update_add_event_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="48dp">

                <TextView
                    android:id="@+id/update_add_event_heading"
                    android:layout_width="match_parent"
                    android:layout_height="104dp"
                    android:gravity="center"
                    android:text="Update Event Form"
                    android:textAlignment="center"
                    android:textColor="#0064B1"
                    android:textSize="28sp"
                    android:textStyle="bold" />
                
                <ImageView
                    android:id="@+id/update_event_img"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:scaleType="center"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/update_material_text_input_layout_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:boxBackgroundColor="#FFFFFF">

                    <EditText
                        android:enabled="false"
                        android:id="@+id/update_event_title"
                        android:layout_width="match_parent"
                        android:layout_height="83dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/event_title"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/update_event_img_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Choose Image" />

                    <TextView
                        android:gravity="center_vertical"
                        android:id="@+id/update_upload_img_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:textSize="14sp"
                        android:text="Choose an image to upload" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/event_department" />

                <Spinner
                    android:id="@+id/update_event_department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:contentDescription="@string/select_department_desc"
                    android:minHeight="64dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/event_date_and_time" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <EditText
                        android:id="@+id/update_in_date"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="16dp" />

                    <Button
                        android:id="@+id/update_btn_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/update_in_date"
                        android:layout_toEndOf="@+id/update_in_date"
                        android:layout_toRightOf="@+id/update_in_date"
                        android:text="DATE" />

                    <EditText
                        android:id="@+id/update_in_time"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/update_in_date"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_toRightOf="@+id/update_btn_date" />

                    <Button
                        android:id="@+id/update_btn_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/update_in_date"
                        android:layout_marginTop="16dp"
                        android:layout_toRightOf="@+id/update_in_time"
                        android:text="TIME" />

                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/update_material_text_input_layout_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:boxBackgroundColor="#FFFFFF">

                    <EditText
                        android:id="@+id/update_event_description"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/event_description"
                        android:inputType="textMultiLine"
                        android:lines="8"
                        android:maxLines="10"
                        android:minLines="6"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:scrollbars="vertical" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/update_material_text_input_layout_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:boxBackgroundColor="#FFFFFF">

                    <EditText
                        android:id="@+id/update_event_email"
                        android:layout_width="match_parent"
                        android:layout_height="83dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/update_material_text_input_layout_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:boxBackgroundColor="#FFFFFF">

                    <EditText
                        android:id="@+id/update_event_contact"
                        android:layout_width="match_parent"
                        android:layout_height="83dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/contact_number"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/update_btn_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:text="Update Event" />

                <Button
                    android:id="@+id/delete_btn_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:text="Delete Event" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>